# learngtk

./: .gitignore  AUTHORS  ChangeLog  README  configure.ac
src/: Makefile.am  learngtk.c
